refactor(api): implement new scanners
